# YEETIFF

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  main.rs  main_v1_backup.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SPEC_v2.md  SPEC_v3.md
examples/: README.md
yeet-core/: Cargo.toml  README.md
yeet-core/src/: main.rs
yeet-installer/: .gitignore  BUILD.bat  README.md  build_exe.py  build_installer.py  installer_gui.py  register_yeet.reg  yeet_viewer.py
yeet-legacy/: Cargo.toml  README.md
yeet-legacy/src/: main.rs
yeet-v3/: Cargo.toml  README.md
yeet-v3/examples/: README.md  create_animation.py
yeet-v3/src/: main.rs
