[workspace]
members = [
    "yeet-core",
    "yeet-v3",
    "yeet-legacy",
]

resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Stijn Jakobs"]
license = "MIT"
repository = "https://github.com/jakobsstijn/YEETIFF"

[workspace.dependencies]
# Shared dependencies across all members
image = { version = "0.24", default-features = false, features = ["png"] }
eframe = "0.22.0"
egui_extras = { version = "0.22", features = ["image"] }
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
