[package]
name = "yeet-core"
version = "2.0.0"
edition = "2021"
authors = ["Stijn Jakobs <stijn@example.com>"]
description = "YEET Image Format - Core viewer and converter (v2)"
license = "MIT"
repository = "https://github.com/jakobsstijn/YEETIFF"
keywords = ["image", "format", "viewer", "converter"]
categories = ["multimedia::images", "command-line-utilities"]

[dependencies]
# Image processing
image = { version = "0.24", default-features = false, features = ["png"] }
egui_extras = { version = "0.22", features = ["image"] }

# GUI framework
eframe = "0.22.0"

# Compression
flate2 = "1.0"

# Color parsing (for v1 legacy support)
css-color-parser = "0.1.2"

# Windows API
winapi = { version = "0.3", features = ["winuser", "windef"] }

# Utilities
base64 = "0.21.2"
env_logger = "0.10.0"

[[bin]]
name = "yeet"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
