[package]
name = "yeet-legacy"
version = "1.0.0"
edition = "2021"
authors = ["Stijn Jakobs"]
description = "YEET v1 legacy format support"
license = "MIT"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
egui_extras = { version = "0.22", features = ["image"] }
eframe = "0.22.0"
css-color-parser = "0.1.2"

[[bin]]
name = "yeet-legacy"
path = "src/main.rs"
