[package]
name = "yeet-v3"
version = "3.0.0-alpha"
edition = "2021"
authors = ["Stijn Jakobs"]
description = "YEET v3 - Next-generation format with ICC profiles and animation"
license = "MIT"
repository = "https://github.com/jakobsstijn/YEETIFF"

[dependencies]
# Image processing
image = { version = "0.24", default-features = false, features = ["png"] }
egui_extras = { version = "0.22", features = ["image"] }

# GUI
eframe = "0.22.0"

# Compression
flate2 = "1.0"
# Future: brotli = "3.3"
# Future: zstd = "0.12"

# ICC profile support (planned)
# lcms2 = "6.0"  # Little CMS color management

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
env_logger = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }

# Legacy support
css-color-parser = "0.1.2"

[[bin]]
name = "yeet-v3"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
